syntax = "proto3";

option csharp_namespace = "TaskClient";
import "google/protobuf/wrappers.proto";

package task;

service Task{
	//create
	rpc CreateTask(CreateTaskRequest) returns (CreateTaskResponse) {}

	//read
	rpc ReadTask(ReadTaskRequest) returns (ReadTaskResponse) {}

	//read all
	rpc ReadAllTask(ReadAllTaskRequest) returns (ReadAllTaskResponse) {}

	//update
	rpc UpdateTask(UpdateTaskRequest) returns (UpdateTaskResponse) {}

	//delete
	rpc DeleteTask(DeleteTaskRequest) returns (DeleteTaskResponse) {}
}

message CreateTaskRequest{
	string name = 1;
	string description = 2;
	int32 priority = 3;
}
message CreateTaskResponse{
	int32 id = 1;
}


message ReadTaskRequest{
	int32 id = 1;
}
message ReadTaskResponse{
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 priority = 4;
	google.protobuf.StringValue status = 5;
}

message ReadAllTaskRequest{}

message ReadAllTaskResponse {
	repeated ReadTaskResponse task = 1;
}

message UpdateTaskRequest{
	int32 id = 1;
	string name = 2;
	string description = 3;
	int32 priority = 4;
	google.protobuf.StringValue status = 5;
}
message UpdateTaskResponse{
	int32 id = 1;
}

message DeleteTaskRequest{
	int32 id = 1;
}
message DeleteTaskResponse{
	int32 id = 1;
}